--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'com.h2database:h2'
+    compile "org.springframework.boot:spring-boot-starter-security"
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
